<resources>
    <string name="app_name">Internet Banking Client</string>
    <string name="logo">Logo</string>
    <string name="username">Uživatelské jméno</string>
    <string name="password">Heslo</string>
    <string name="signup">Přihlásit se</string>
    <string name="row_item_balance_label">Zůstatek:</string>
    <string name="row_item_accountNumber_value">account number</string>
    <string name="row_item_balance_value">balance</string>
    <string name="row_item_cardNumber_value">card number</string>
    <string name="row_item_accountNumber_label">Číslo účtu:</string>
    <string name="row_item_cardNumber_label">Kreditní karta:</string>
    <string name="row_item_transaction"><![CDATA[from -> to]]></string>
    <string name="row_item_amount">amount</string>
    <string name="row_item_transaction_label">Platba</string>
    <string name="wor_item_transaction_label_posVal">Příchozí platba</string>
    <string name="wor_item_transaction_label_consVal">Odchozí platba</string>
    <string name="row_item_transaction_date">2019-10-10</string>
    <string name="row_item_transaction_acc_label">Z účtu</string>
    <string name="row_item_transaction_acc_from">Z účtu:</string>
    <string name="row_item_transaction_acc_to">Na účet:</string>
    <string name="pick_account">Vyberte účet:</string>
    <string name="show_detail">Zobrazit</string>
    <string name="amount_label">Částka:</string>
    <string name="go_to_transaction">Vytvořit transakci</string>
    <string name="newAccountNumber">Číslo účtu příjemnce</string>
    <string name="newAmount">Částka:</string>
    <string name="newDueDate">Datum splatnosti:</string>
    <string name="newAmountValue">Částka</string>
    <string name="newDueDateValue">dd.mm.rrrr</string>
    <string name="newConstant">Konstantní symbol:</string>
    <string name="newVariable">Variabilní symbol:</string>
    <string name="newMessage">Zpráva pro příjemce:</string>
    <string name="newSpecific">Specifický symbol:</string>
    <string name="performTransaction">Provést platbu</string>
</resources>
