<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="3dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:id="@+id/transaction_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/row_item_amount"
                android:textColor="@android:color/black" />


            <TextView
                android:id="@+id/transaction_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/row_item_transaction_date" />


            <TextView
                android:id="@+id/transaction_acc_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transaction_label"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/transaction_label"
                android:layout_toEndOf="@id/transaction_acc_label"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/row_item_transaction" />

            <TextView
                android:id="@+id/amount_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transaction"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:text="@string/amount_label"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/transaction_acc_label"
                android:layout_toEndOf="@id/amount_label"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/row_item_transaction_label" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>